fixed whitespace bug and autocorrect bug

--- a/css/terminal.css
+++ b/css/terminal.css
@@ -50,6 +50,7 @@ body {
     padding-top: 1px;    
     display:flex;
     flex-wrap:wrap;
+    white-space: pre;
 }
 
 #output{
